--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "tang",
+  "name": "Randy/tang",
   "description": "this is a test of tang",
   "license": "MIT",
   "keywords": ["test"],
